--- a/Valeting.Web/Views/Shared/_Layout.cshtml
+++ b/Valeting.Web/Views/Shared/_Layout.cshtml
@@ -3,47 +3,102 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>@ViewData["Title"] - Valeting.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Valeting.Web.styles.css" asp-append-version="true" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link href="~/fonts/FontAwesomeFree_5.13/css/all.min.css" rel="stylesheet">
+
+    <!-- Plugins CSS -->
+    <link rel="stylesheet" href="~/lib/Bootstrap_4.4.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/JqueryUI-1.12.1/css/jquery-ui.min.css" />
+
+    <link rel="stylesheet" href="~/lib/Datepicker/css/bootstrap-datepicker.min.css" />
+    <link rel="stylesheet" href="~/lib/Animate/css/animate.min.css" />
+    <link rel="stylesheet" href="~/lib/JQueryDataTables_1.10.21/css/datatables.min.css" />
+    <link rel="stylesheet" href="~/lib/JQueryDataTables_1.10.21/Responsive-2.2.5/css/responsive.dataTables.min.css" />
+    <link rel="stylesheet" href="~/lib/JQuerySelect2/css/select2.min.css" />
+    <link rel="stylesheet" href="~/lib/JQuerySelect2/css/select2-bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/SweetAlert2-9.15.1/css/sweetalert2.min.css" />
+
+    <link rel="stylesheet" href="~/shared/css/Utility.min.css" />
+    <link rel="stylesheet" href="~/shared/css/style.min.css" />
+
+    <link rel="stylesheet" href="~/client/css/layout/Layout.min.css" />
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Valeting.Web</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+        <div class="container">
+            <div class="box-header">
+
+                <div class="left-header">
+                    <div class="box-info-usuario">
+                        <div class="info-extra">
+                            <div class="info-links">
+                                <a href="javascript:void(0)">Início</a>
+                                <div class="separador"></div>
+                                <a href="javascript:void(0)">Sair</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="center-header"></div>
+
+                <div class="right-header">
+                    <nav id="navMenu" class="navMenu">
+                        <ul>
+                            <li><a href="javascript:void(0)" id="btnFecharMenu" class="btnFecharMenu">&times;</a></li>
+                            <li><a href="javascript:void(0)">Sair</a></li>
+                        </ul>
+                    </nav>
+
+                    <span id="btnAbrirMenu" style="font-size: 30px; cursor: pointer">&#9776;</span>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
 
-    <footer class="border-top footer text-muted">
+        </div>
+    </header>
+
+    <main role="main" class="animated fadeInDown">
+        @RenderBody()
+    </main>
+
+    <footer>
         <div class="container">
-            &copy; 2022 - Valeting.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <div class="box-footer">
+            </div>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+
+    <script type="text/javascript">
+        var Master_Vars = {
+            baseUrl: '@Href("~/")'
+        };
+    </script>
+
+    <!-- Plugins JS -->
+    <script src="~/lib/JQuery_3.5.1/js/jquery-3.5.1.min.js"></script>
+    <script src="~/lib/JQueryUI-1.12.1/js/jquery-ui.min.js"></script>
+    <script src="~/lib/Popper/js/popper.min.js"></script>
+    <script src="~/lib/Bootstrap_4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="~/lib/BlockUI/js/jquery.blockUI.js"></script>
+    <script src="~/lib/Datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/lib/JQueryInputMask/js/jquery.inputmask.min.js"></script>
+    <script src="~/lib/JQueryValidation_1.19.2/js/jquery.validate.min.js"></script>
+    <script src="~/lib/JQueryValidation_1.19.2/js/additional-methods.min.js"></script>
+    <script src="~/lib/JQueryDataTables_1.10.21/js/datatables.min.js"></script>
+    <script src="~/lib/JQueryDataTables_1.10.21/Responsive-2.2.5/js/dataTables.responsive.min.js"></script>
+    <script src="~/lib/JQuerySelect2/js/select2.min.js"></script>
+    <script src="~/lib/SweetAlert2-9.15.1/js/sweetalert2.all.min.js"></script>
+
+    <script src="~/shared/js/utility.js"></script>
+
+    <script src="~/client/js/layout/layout.js"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
