added js, controllers and little fixes..

--- a/Valeting.Web/wwwroot/shared/css/style.css
+++ b/Valeting.Web/wwwroot/shared/css/style.css
@@ -93,7 +93,7 @@ select.form-control::-ms-expand {
   width: 10% !important;
 }
 .tabela-datatable table tbody td {
-  background-color: #F5F5F5;
+  background-color: #fff;
   border: none;
   text-align: center;
   vertical-align: middle;
