--- a/Valeting.Web/wwwroot/shared/css/style.less
+++ b/Valeting.Web/wwwroot/shared/css/style.less
@@ -131,7 +131,7 @@ select.form-control {
 
         tbody {
             td {
-                background-color: #F5F5F5;
+                background-color: #fff;
                 border: none;
                 text-align: center;
                 vertical-align: middle;
